--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <title>CSCE 190: Conner Kennedy</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Conner  Kennedy</h1>
+    <h1>Conner Kennedy</h1>
+    <div class="about"><h2>About me</h2></div>
+    <div class="skills"><h2>Skills</h2></div>
+    <div class="projects"><h2>Highlighted projects</h2></div>
+    <div class="contact"><h2>Contact me</h2></div>
   </body>
 </html>
