changes to problem statement

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <h1>Conner Kennedy</h1>
     <div class="about"><h2>About me</h2></div>
     <div class="skills"><h2>Skills</h2></div>
-    <div class="projects"><h2>Highlighted projects</h2></div>
+    <div class="projects"><h2>Highlighted projects</h2>
+      <!-- Problem Statement Assignment -->
+      <section class="project">
+        <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
+        <a href="files/statement.pdf"><img src="images/problem.png"></a>
+        <p>One sentence to describe your problem</p>
+      </section>
+    </div>
     <div class="contact"><h2>Contact me</h2></div>
   </body>
 </html>
